--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,11 +3,13 @@
 }
 footer {
   padding: 20px;
+  background-color: rgb(63, 62, 62);
 }
 
 h1, p, h3{
   text-align: right;
   font-family: "BKoodakBold";
+  color: white;
 }
 
 h3 {
@@ -21,7 +23,7 @@ ul {
     display: flex;
     text-align: right;
     a {
-      color: black;
+      color: white;
       text-decoration: none;
       font-size: 17px;
       line-height: 25px;
