--- a/src/app/modules/details/details.component.scss
+++ b/src/app/modules/details/details.component.scss
@@ -2,10 +2,33 @@
   font-family: "BKoodakBold";
 }
 
+.with-icon {
+  display: flex;
+  align-items: center;
+}
+
+h1,h2,h3,h4,h5 {
+  text-align: right;
+  font-family: "BKoodakBold";
+}
+
+a, p {
+  text-align: right;
+  font-family: "BKoodakBold";
+}
+
 h1{
   font-size: 20px;
   text-align: right;
   font-family: "BKoodakBold";
+  span{
+    font-size: 14px;
+    color: gray;
+  }
+
+  span.time {
+    margin-right: 10%;
+  }
 }
 
 .sticky-top h1 {
@@ -91,9 +114,13 @@ h1{
   .opinion_card{
     padding-bottom: 4%;
   }
-  h1 img {
-    width: 40px;
-    height: 40px;
+  h1{
+    text-align: right;
+    font-family: "BKoodakBold";
+    img {
+      width: 40px;
+      height: 40px;
+    }
   }
   .example-form {
     width: 100%;
@@ -151,13 +178,21 @@ h1{
       width: 109%;
       img {
         max-width: 400px;
-        height: 250px;
+        height: 150px;
       }
       mat-card-content {
         span {
           padding-left: 20%;
         }
       }
+    }
+  }
+
+  .content_box {
+    margin-top: 5%;
+    img {
+      width: 100%;
+      height: 250px;
     }
   }
 
@@ -172,7 +207,7 @@ h1{
       width: 110%;
       img {
         max-width: 400px;
-        height: 250px;
+        height: 200px;
       }
       mat-card-content {
         span {
@@ -186,7 +221,7 @@ h1{
     margin-top: 5%;
     img {
       width: 100%;
-      height: 200px;
+      height: 150px;
     }
   }
 
