adding about us content to the footer

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -5,7 +5,7 @@
     <div class="row" dir="rtl">
       <div class="col-lg-4 col-md-12 col-sm-12 col-12">
         <h1>درباره سایت</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut pariatur unde soluta qui dolores obcaecati nesciunt facere earum culpa inventore ex, deleniti in? Maxime, corporis enim quasi delectus error a.</p>
+        <p>تیم <b>lowrisk</b> گروهی متشکل از متخصصان حوزه مالی است که با مطالعه و رصد بازارهای مالی، سعی در جهت بهبود راه کارهای سرمایه گذاری در تمامی بازار های مالی از قبیل سهام، صندوق‌های سرمایه‌گذاری، ارز دیجیتال، اوراق بدهی و …را دارد.</p>
       </div>
       <div class="col-lg-4 col-md-12 col-sm-12 col-12">
         <h1>منوی سایت</h1>
