adding delete user to the users table and change the font of the content

--- a/src/app/modules/table-page/table-page.component.scss
+++ b/src/app/modules/table-page/table-page.component.scss
@@ -3,8 +3,19 @@
   margin-bottom: 5%;
 }
 
+mat-form-field{
+  font-family: "BKoodakBold";
+  mat-label {
+    font-size: 17px;
+  }
+}
+
 table {
   width: 100%;
+  th {
+    font-family: "BKoodakBold";
+    font-size: 18px;
+  }
   tr {
     text-align: right;
   }
