--- a/src/app/modules/table-page/table-page.component.html
+++ b/src/app/modules/table-page/table-page.component.html
@@ -44,8 +44,8 @@
   <div class="row">
     <div class="col-lg-12">
       <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
+        <mat-label>جست و جو</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="شماره تلفن">
       </mat-form-field>
 
       <table mat-table [dataSource]="userSource" class="mat-elevation-z8">
@@ -66,6 +66,16 @@
         <ng-container matColumnDef="mobile">
           <th mat-header-cell *matHeaderCellDef> موبایل </th>
           <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef>حذف</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-raised-button color="warn" title="حذف" (click)="deleteUser(element.id)">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="userColumns"></tr>
