--- a/src/app/modules/add-post/add-post.component.scss
+++ b/src/app/modules/add-post/add-post.component.scss
@@ -2,6 +2,16 @@
   font-family: "BKoodakBold";
 }
 
+.mat-simple-snackbar {
+  font-family: "BKoodakBold";
+  font-size: 17px;
+  display: inline-block !important;
+}
+
+.mat-snack-bar-container {
+  text-align: center;
+}
+
 h2 {
   font-family: "BKoodakBold";
   text-align: right;
