--- a/src/app/layouts/admin/admin.component.html
+++ b/src/app/layouts/admin/admin.component.html
@@ -19,7 +19,7 @@
 
       </mat-drawer-container>
     </div>
-    <div class="col-lg-12" style="height: 300px;">
+    <div class="col-lg-12">
       <app-footer></app-footer>
     </div>
   </div>
